--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             </button>
           </li>
           <li>
-            <a class="header__resume btn" href="#">Resume</a>
+            <a class="header__resume btn" href="C:\Users\Rcng8\OneDrive\Documents\Professional\Russell Ng Resume.pdf" download>Resume</a>
           </li>
         </ul>
         <button aria-label="mobile nav button" class="header__bars">
@@ -77,7 +77,7 @@
         <h2 class="hero__subtitle">Hi, I'm Russell</h2>
         <h1 class="hero__title">Fullstack Developer.</h1>
         <p class="hero__description">Passionate <strong>Fullstack developer</strong> with a keen eye for <strong>UI/UX</strong> design. Experience in both front and back-end programming.</p>
-        <a class="hero__btn btn" href="">Reach out</a>
+        <a class="hero__btn btn" href="https://www.linkedin.com/in/russell-ng-a25b43220/">Reach out</a>
       </section>
       <section id="about" class="about container section">
         <div class="about__content">
@@ -129,7 +129,7 @@
           <h3 class="work__project-subtitle">Personal Portfolio Website</h3>
           <p class="work__project-description1">This personal portfolio website is the website you are currently viewing right now.</p>
           <p class="work__project-description2">I created this website using HTML, CSS and JavaScript. I also used Vite to help make the website faster and more optimized.</p>
-          <a class="btn work__project-btn" href="https://personal-portfolio-website-8f006gv5x-russell-ngs-projects.vercel.app/">Website</a>
+          <a class="btn work__project-btn" href="https://github.com/rcng81/Personal-Portfolio-Website">Website</a>
         </div>
       </div>
       </section>
