--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             </button>
           </li>
           <li>
-            <a class="header__resume btn" href="C:\Users\Rcng8\OneDrive\Documents\Professional\Russell Ng Resume.pdf" download>Resume</a>
+            <a class="header__resume btn" href="https://coral-lelia-69.tiiny.site">Resume</a>
           </li>
         </ul>
         <button aria-label="mobile nav button" class="header__bars">
@@ -64,7 +64,7 @@
             </button>
           </li>
           <li>
-            <a class="mobile-nav__btn btn" href="#">Resume</a>
+            <a class="mobile-nav__btn btn" href="https://coral-lelia-69.tiiny.site">Resume</a>
           </li>
         </ul>
       </nav>
