--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             </button>
           </li>
           <li>
-            <a class="header__resume btn" href="https://coral-lelia-69.tiiny.site">Resume</a>
+            <a class="header__resume btn" href="https://coral-lelia-69.tiiny.site" target="_blank">Resume</a>
           </li>
         </ul>
         <button aria-label="mobile nav button" class="header__bars">
@@ -64,7 +64,7 @@
             </button>
           </li>
           <li>
-            <a class="mobile-nav__btn btn" href="https://coral-lelia-69.tiiny.site">Resume</a>
+            <a class="mobile-nav__btn btn" href="https://coral-lelia-69.tiiny.site" target="_blank">Resume</a>
           </li>
         </ul>
       </nav>
@@ -77,7 +77,7 @@
         <h2 class="hero__subtitle">Hi, I'm Russell</h2>
         <h1 class="hero__title">Fullstack Developer.</h1>
         <p class="hero__description">Passionate <strong>Fullstack developer</strong> with a keen eye for <strong>UI/UX</strong> design. Experience in both front and back-end programming.</p>
-        <a class="hero__btn btn" href="https://www.linkedin.com/in/russell-ng-a25b43220/">Reach out</a>
+        <a class="hero__btn btn" href="https://www.linkedin.com/in/russell-ng-a25b43220/" target="_blank">Reach out</a>
       </section>
       <section id="about" class="about container section">
         <div class="about__content">
@@ -118,7 +118,7 @@
           <h3 class="work__project-subtitle">Mathdle</h3>
           <p class="work__project-description1">Mathdle is a program application developed to be similar to the popular word-guessing game, Wordle. However, instead of guessing a word, players are tasked with guessing a math equation.</p>
           <p class="work__project-description2">I created this program using python and its itertools library, specfically its combinatoric generator and permutation functions. Itertools functions were used to help generate permutations of possible equations within a range.</p>
-          <a class="btn work__project-btn" href="https://github.com/rcng81/numberWordle">Website</a>
+          <a class="btn work__project-btn" href="https://github.com/rcng81/numberWordle" target="_blank">Website</a>
         </div>
         <!-- Project 2 -->
         <h3 class="work__project-title">Personal Portfolio Website</h3>
@@ -129,7 +129,7 @@
           <h3 class="work__project-subtitle">Personal Portfolio Website</h3>
           <p class="work__project-description1">This personal portfolio website is the website you are currently viewing right now.</p>
           <p class="work__project-description2">I created this website using HTML, CSS and JavaScript. I also used Vite to help make the website faster and more optimized.</p>
-          <a class="btn work__project-btn" href="https://github.com/rcng81/Personal-Portfolio-Website">Website</a>
+          <a class="btn work__project-btn" href="https://github.com/rcng81/Personal-Portfolio-Website" target="_blank">Website</a>
         </div>
       </div>
       </section>
