--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
           <ul class="about__ul">
             <li class="about__list">CSS</li>
             <li class="about__list">HTML</li>
-            <!-- <li class="about__list"></li> -->
+            <li class="about__list">Git</li>
           </ul>
           </div>
         </div>
