--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <h2 class="hero__subtitle">Hi, I'm Russell</h2>
         <h1 class="hero__title">Fullstack Developer.</h1>
         <p class="hero__description">Passionate <strong>Fullstack developer</strong> with a keen eye for <strong>UI/UX</strong> design. Experience in both front and back-end programming.</p>
-        <a class="hero__btn btn" href="https://www.linkedin.com/in/russell-ng-a25b43220/" target="_blank">Reach out</a>
+        <a class="hero__btn btn" href="https://www.linkedin.com/in/russell-cng/" target="_blank">Reach out</a>
       </section>
       <section id="about" class="about container section">
         <div class="about__content">
@@ -96,7 +96,7 @@
           <ul class="about__ul">
             <li class="about__list">CSS</li>
             <li class="about__list">HTML</li>
-            <li class="about__list">Git</li>
+            <!-- <li class="about__list"></li> -->
           </ul>
           </div>
         </div>
@@ -139,7 +139,7 @@
         <p class="contact__description">rn95866n@pace.edu</p>
         <a
           class="contact__btn btn"
-          href="https://www.linkedin.com/in/russell-ng-a25b43220/"
+          href="https://www.linkedin.com/in/russell-cng/"
           target="_blank"
           >React Out</a
         >
