--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
           class="contact__btn btn"
           href="https://www.linkedin.com/in/russell-cng/"
           target="_blank"
-          >React Out</a
+          >Reach Out</a
         >
       </section>
     </main>
