--- a/index.html
+++ b/index.html
@@ -137,11 +137,11 @@
         <h2 class="contact__title">Get In Contact</h2>
         <p class="contact__description">Feel free to connect with me!</p>
         <p class="contact__description">rn95866n@pace.edu</p>
-        <!-- <a
+        <a
           class="contact__btn btn"
           href="https://www.linkedin.com/in/russell-cng/"
           target="_blank"
-          >Reach out</a -->
+          >Reach out</a
         >
       </section>
     </main>
