--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
       <section class="hero container">
         <img class="hero__img" src="/DSC03299 Flip - Copy.jpg" alt="Profile picture">
         <h2 class="hero__subtitle">Hi, I'm Russell</h2>
-        <h1 class="hero__title">Fullstack Developer.</h1>
+        <h1 class="hero__title">Fullstack Developer</h1>
         <p class="hero__description">Passionate <strong>Fullstack developer</strong> with a keen eye for <strong>UI/UX</strong> design. Experience in both front and back-end programming.</p>
         <a class="hero__btn btn" href="https://www.linkedin.com/in/russell-cng/" target="_blank">Reach out</a>
       </section>
