--- a/index.html
+++ b/index.html
@@ -91,9 +91,10 @@
             <ul class="about__ul">
               <li class="about__list">Python</li>
               <li class="about__list">Java</li>
-              <li class="about__list">JavaScript</li>
+              <li class="about__list">Flask</li>
             </ul>
           <ul class="about__ul">
+            <li class="about__list">JavaScript</li>
             <li class="about__list">CSS</li>
             <li class="about__list">HTML</li>
             <!-- <li class="about__list"></li> -->
@@ -112,24 +113,35 @@
         <!-- Project 1 -->
         <h3 class="work__project-title">Mathdle</h3>
         <div class="work__img-wrapper work__image1">
-          <img class="lazy loading" src="https://fakeimg.pl/2000x1500" data-src="comments-python.jpg" alt="Mathdle Photo">
+          <img class="lazy loading" src="https://fakeimg.pl/2000x1500" data-src="DALL·E 2023-10-24 17.33.45 - Pixel art cover with a consistent style. The centerpiece is a computer showcasing the Python logo on its screen. Surrounding the computer are technolo.png" alt="Mathdle Photo">
         </div>
         <div class="work__project work__content1">
           <h3 class="work__project-subtitle">Mathdle</h3>
-          <p class="work__project-description1">Mathdle is a program application developed to be similar to the popular word-guessing game, Wordle. However, instead of guessing a word, players are tasked with guessing a math equation.</p>
-          <p class="work__project-description2">I created this program using python and its itertools library, specfically its combinatoric generator and permutation functions. Itertools functions were used to help generate permutations of possible equations within a range.</p>
+          <p class="work__project-description1">Similar to wordle, but is designed to engage users with a challenging math equation.</p>
+          <p class="work__project-description2">Developed using Python's computational libraries to ensure accurate equations and solution. Generated all permutations of possible equations from a set range.</p>
           <a class="btn work__project-btn" href="https://github.com/rcng81/numberWordle" target="_blank">Website</a>
         </div>
         <!-- Project 2 -->
         <h3 class="work__project-title">Personal Portfolio Website</h3>
         <div class="work__img-wrapper work__image2">
-          <img class="lazy loading" src="https://fakeimg.pl/900x674" data-src="127dd425fab7fb8f89cdb979b820fd61.png" alt="#">
+          <img class="lazy loading" src="https://fakeimg.pl/900x674" data-src="DALL·E 2023-10-24 17.30.50 - Pixel art cover maintaining a similar style to the first. The main subject is a sleek monitor displaying a generic website design, where the details a.png" alt="#">
         </div>
         <div class="work__project work__content2">
           <h3 class="work__project-subtitle">Personal Portfolio Website</h3>
-          <p class="work__project-description1">This personal portfolio website is the website you are currently viewing right now.</p>
+          <p class="work__project-description1">A dynamic and responsive web platform showcasing my professional journey and technical projects.</p>
           <p class="work__project-description2">I created this website using HTML, CSS and JavaScript. I also used Vite to help make the website faster and more optimized.</p>
           <a class="btn work__project-btn" href="https://github.com/rcng81/Personal-Portfolio-Website" target="_blank">Website</a>
+        </div>
+        <!-- Project 3 -->
+        <h3 class="work__project-title">BoostBuddy</h3>
+        <div class="work__img-wrapper work__image3">
+          <img class="lazy loading" src="https://fakeimg.pl/2000x1500" data-src="DALL·E 2023-10-24 17.31.48 - Pixel art cover consistent with the theme of the previous designs. The centerpiece is a smaller robot resembling the Discord logo but in a slightly da.png" alt="Mathdle Photo">
+        </div>
+        <div class="work__project work__content3">
+          <h3 class="work__project-subtitle">BoostBuddy</h3>
+          <p class="work__project-description1">An innovative Discord bot designed to motivate users by delivering daily motivational quotes from famous people.</p>
+          <p class="work__project-description2">Utilized Python and Discord API to develop core functionalities. Uses a schedule task system using Pythons ayncio and tasks extensions to post quotes daily at specific times.</p>
+          <a class="btn work__project-btn" href="https://github.com/rcng81/BoostBuddy" target="_blank">Website</a>
         </div>
       </div>
       </section>
