--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             </button>
           </li>
           <li>
-            <a class="mobile-nav__btn btn" href="https://coral-lelia-69.tiiny.site" target="_blank">Resume</a>
+            <a class="mobile-nav__btn btn" href="https://peach-filide-68.tiiny.site/" target="_blank">Resume</a>
           </li>
         </ul>
       </nav>
