--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             </button>
           </li>
           <li>
-            <a class="header__resume btn" href="https://coral-lelia-69.tiiny.site" target="_blank">Resume</a>
+            <a class="header__resume btn" href="https://www.youtube.com/" target="_blank">Resume</a>
           </li>
         </ul>
         <button aria-label="mobile nav button" class="header__bars">
