--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             </button>
           </li>
           <li>
-            <a class="header__resume btn" href="https://peach-filide-68.tiiny.site" target="_blank">Resume</a>
+            <a class="header__resume btn" href="https://coffee-hildegaard-11.tiiny.site" target="_blank">Resume</a>
           </li>
         </ul>
         <button aria-label="mobile nav button" class="header__bars">
