--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
               <li class="about__list">Python</li>
               <li class="about__list">Java</li>
               <li class="about__list">Flask</li>
+              <li class="about__list">React</li>
             </ul>
           <ul class="about__ul">
             <li class="about__list">JavaScript</li>
