--- a/index.html
+++ b/index.html
@@ -144,6 +144,17 @@
           <p class="work__project-description2">Utilized Python and Discord API to develop core functionalities. Uses a schedule task system using Pythons ayncio and tasks extensions to post quotes daily at specific times.</p>
           <a class="btn work__project-btn" href="https://github.com/rcng81/BoostBuddy" target="_blank">Website</a>
         </div>
+        <!-- Project 4 -->
+        <h3 class="work__project-title">Precision Sync</h3>
+        <div class="work__img-wrapper work__image4">
+          <img class="lazy loading" src="https://fakeimg.pl/900x674" data-src="DALL·E 2023-11-16 23.23.42 - Pixel art cover for a Sensitivity Converter Website, with no text. The image features a central computer screen displaying a React logo, surrounded by.png" alt="#">
+        </div>
+        <div class="work__project work__content4">
+          <h3 class="work__project-subtitle">Precision Sync</h3>
+          <p class="work__project-description1">A responsive web platform with a built in algorithm to convert sensitivity over various games.</p>
+          <p class="work__project-description2">Created in JavaScript and React.js to build friendly user-interface. Dynamic CSS styles to set light and dark mode themes.</p>
+          <a class="btn work__project-btn" href="https://github.com/rcng81/Precision-Sync" target="_blank">Website</a>
+        </div>
       </div>
       </section>
       <section id="contact" class ="contact container section">
