--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
         <div class="work__project work__content3">
           <h3 class="work__project-subtitle">BoostBuddy</h3>
           <p class="work__project-description1">An innovative Discord bot designed to motivate users by delivering daily motivational quotes from famous people.</p>
-          <p class="work__project-description2">Utilized Python and Discord API to develop core functionalities. Uses a schedule task system using Pythons ayncio and tasks extensions to post quotes daily at specific times.</p>
+          <p class="work__project-description2">Utilized Python and Discord API to develop functionalities. Uses a schedule task system using Pythons ayncio and tasks extensions to post quotes daily at specific times.</p>
           <a class="btn work__project-btn" href="https://github.com/rcng81/BoostBuddy" target="_blank">Website</a>
         </div>
         <!-- Project 4 -->
