--- a/index.html
+++ b/index.html
@@ -181,6 +181,17 @@
           <p class="work__project-description2">Created in JavaScript and React.js to build friendly user-interface. Dynamic CSS styles to set light and dark mode themes.</p>
           <a class="btn work__project-btn" href="https://github.com/rcng81/Precision-Sync" target="_blank">Website</a>
         </div>
+        <!-- Project 5 -->
+        <h3 class="work__project-title">Road Accident Dashboard</h3>
+        <div class="work__img-wrapper work__image5">
+          <img class="lazy loading" src="https://fakeimg.pl/2000x1500" data-src="DALL·E 2024-04-14 19.09.22 - Pixel art cover for an Excel project focused on a dashboard of car road incidents. The central image features a computer screen displaying a stylized .webp" alt="Mathdle Photo">
+        </div>
+        <div class="work__project work__content5">
+          <h3 class="work__project-subtitle">Road Accident Dashboard</h3>
+          <p class="work__project-description1">A dynamic Excel dashboard meticulously engineered to analyze road accident data, providing critical insights through interactive charts and visualizations.</p>
+          <p class="work__project-description2">Utilized Excel for data cleaning, processing, and analysis, creating dynamic visualizations to highlight trends in road accident data.</p>
+          <a class="btn work__project-btn" href="https://github.com/rcng81/Road-Accident-Dashboard" target="_blank">Website</a>
+        </div>
       </div>
       </section>
       <section id="contact" class ="contact container section">
